crates/carta/tests/snapshots/golden_writer__docbook__common__definition-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<variablelist>
  <varlistentry>
    <term>
      Term
    </term>
    <listitem>
      <para>
        Definition one
      </para>
      <para>
        Definition two
      </para>
    </listitem>
  </varlistentry>
</variablelist>
