crates/carta/tests/snapshots/golden_writer__docbook__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<variablelist spacing="compact">
  <varlistentry>
    <term>
      term: with colon
    </term>
    <listitem>
      <para>
        definition
      </para>
    </listitem>
  </varlistentry>
</variablelist>
