crates/carta/tests/snapshots/golden_writer__docbook__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<note>
  <para>
    be careful here
  </para>
</note>
