crates/carta/tests/snapshots/golden_writer__docbook__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<note xml:id="d">
  <para>
    body paragraph
  </para>
</note>
