crates/carta/tests/snapshots/golden_writer__docbook__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <emphasis role="strong">bold</emphasis> opens the line
</para>
<para>
  *literal star
</para>
