crates/carta/tests/snapshots/golden_writer__docbook__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <emphasis>see <link xlink:href="http://example.com">text</link>
  here</emphasis>
</para>
