crates/carta/tests/snapshots/golden_writer__docbook__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  a * b ` c | d and trailing_ref_
</para>
