crates/carta/tests/snapshots/golden_writer__docbook__common__escape-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  a &amp; b % c # d _ e $ f { g } h ^ i ~ j
</para>
