crates/carta/tests/snapshots/golden_writer__docbook__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  ref<footnote>
    <programlisting>
code only
</programlisting>
  </footnote>
</para>
