crates/carta/tests/snapshots/golden_writer__docbook__common__footnote-multipara.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  ref<footnote>
    <para>
      first paragraph
    </para>
    <para>
      second paragraph
    </para>
  </footnote>
</para>
